--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+/* Slick carousel styles */
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
 .App {
   text-align: center;
 }
