--- a/src/Component/ContactButtons/ContactButtons.css
+++ b/src/Component/ContactButtons/ContactButtons.css
@@ -10,6 +10,7 @@
     padding: 10px;
     box-shadow: 0px -2px 6px rgba(0, 0, 0, 0.1);
     z-index: 999;
+    height: 60px;
 }
 
 .call-button,
@@ -25,10 +26,4 @@
 
 .whatsapp-button {
     background-color: #25d366;
-}
-
-.button-container {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
 }
