--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -1,19 +1,72 @@
+
+footer {
+    padding-bottom: 70px; /* Add enough padding to avoid overlap with fixed buttons */
+}
+
 .footerlogo{
     width: 100px;
     height: auto;
 }
 
 
+.social {
+    display: flex;
+    justify-content: space-between; /* Adjust spacing between icons */
+    flex-wrap: nowrap; /* Prevent wrapping */
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.social li {
+    display: inline-block; /* Ensure the list items are inline */
+}
+
 .social img {
     width: 40px; /* Adjust the width as needed */
-    height: 40px; /* Adjust the height to maintain aspect ratio */
+    height: auto; /* Set height to auto to maintain aspect ratio */
+    margin: 0 5px; /* Add some space between the icons */
 }
-  
+
+
+/* For smaller screens, you can further refine the spacing */
+@media screen and (max-width: 576px) {
+    .social {
+        justify-content: space-around; /* Distribute icons evenly on small screens */
+    }
+}
+
+
+
 /* Footer.css */
 
 /* Apply text transformation to capitalize each word */
 ul li a {
     text-transform: capitalize;
 }
+/* Footer.css */
 
-  
+.Subscribe-now-button {
+    background-color: #4CAF50; 
+    color: white; /* Text color */
+    border: none; /* Remove border */
+    border-radius: 12px; /* Set border radius for rounded corners */
+    padding: 10px 20px; /* Adjust padding for the button */
+    font-size: 16px; /* Font size */
+    cursor: pointer; /* Change cursor on hover */
+    display: flex; /* Use flexbox for centering */
+    justify-content: center; /* Center text horizontally */
+    align-items: center; /* Center text vertically */
+    width: 100%; /* Make the button take full width of the container */
+    transition: background-color 0.3s; /* Smooth transition for hover effect */
+    border-radius: 5px
+}
+
+.Subscribe-now-button:hover {
+    background-color: #45a049; /* Darker green on hover */
+}
+
+ol, ul{
+    padding-left: 0px;
+}
+
