--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,133 +1,266 @@
-header{
-    margin-top: 0px;
+header {
+    margin-top: 0;
     background-color: #ddd;
 }
 
-header .row{
-    margin: 50px 0px;
+header .row {
+    margin: 50px 0;
 }
 
-header .row h5{
-    color: var(--btn-color);
-    font-size: 20px;
-    margin: 40px 0px 10px 0px;
-}
-
-header h2{
+.Physiotherapy-At-Home-header {
     color: var(--main-color);
     font-size: 50px;
-    margin: 30px 0px;
+    margin: 30px 0;
     font-weight: bold;
     letter-spacing: 1px;
     word-spacing: 5px;
-
 }
 
-header button{
-    background-color: var(--orange-color) !important;
-    width: 200px;
-    height: 60px;
-    border: 1px solid var(--orange-color) !important;
-    border-radius: 4px !important;
-    margin-top: 20px;
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
 }
 
-header button a{
-    color: #fff;
-    font-size: 17px;
-    transition: .2s ease;
-}
-
-header button:hover a{
-    color: #fff;
-}
-
-header button:hover{
-    opacity: .6;
-}
-
-header span{
-    display: block;
-    font-size: 100px;
-    color: #fff;
-    -webkit-text-stroke: 1px var(--orange-color);
-    -moz-text-stroke: 1px var(--orange-color);
-    -o-text-stroke: 1px var(--orange-color);
-    animation: mover 1s infinite alternate;
-    -moz-animation: mover 1s infinite alternate;
-    -webkit-animation: mover 1s infinite alternate;
-    -o-animation: mover 1s infinite alternate;
-}
-
-header .header-box{
-    position: relative;
-    max-width: 100%;
-    height: auto;
-}
-
-header img{
-    max-width: 100%;
+.styled-image {
     width: 400px;
     height: auto;
-    margin-top: 100px;
-    animation: mover 1s infinite alternate;
-    -moz-animation: mover 1s infinite alternate;
-    -webkit-animation: mover 1s infinite alternate;
-    -o-animation: mover 1s infinite alternate;
-    transition: .3s ease all;
+    border-radius: 15px;
+    box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.789);
+    background-color: #fff;
+    border: 10px solid rgba(0, 0, 0, 0.358);
+    transition: transform 0.3s ease;
 }
 
-@keyframes mover{
-    0%{
-        transform: translateY(-20px);
-    }
-    100%{
-        transform: translateY(0px);
-    }
+.styled-image:hover {
+    transform: scale(1.05);
 }
 
-@-webkit-keyframes mover{
-    0%{
-        transform: translateY(-20px);
-    }
-    100%{
-        transform: translateY(0px);
-    }
+.follow-us-section {
+    text-align: center;
+    margin-top: 30px;
 }
 
-@moz-keyframes mover{
-    0%{
-        transform: translateY(-20px);
-    }
-    100%{
-        transform: translateY(0px);
-    }
+.follow-us-section h3 {
+    font-size: 24px;
+    color: #333;
+    margin-bottom: 15px;
 }
 
-@-o-keyframes mover{
-    0%{
-        transform: translateY(-20px);
-    }
-    100%{
-        transform: translateY(0px);
-    }
+.social-icons {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
 }
 
-header svg{
-    color: var(--btn-color);
-    font-size: 80px;
+.social-icons a img {
+    width: 50px;
+    height: 50px;
+    border-radius: 8px;
+    transition: transform 0.3s ease;
+}
+
+.social-icons a img:hover {
+    transform: scale(1.1);
+}
+
+.services-section {
+    text-align: center;
+    margin: 50px 0;
+    padding: 50px;
+    background-color: #D3F1F5;
+    border-radius: 10px;
+}
+
+.services-section h2 {
+    font-size: 28px;
+    color: #333;
+}
+
+.services-section p {
+    font-size: 16px;
+    color: #666;
+    margin-bottom: 30px;
+}
+
+.services-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    justify-items: center;
+}
+
+.service-item {
+    position: relative;
+    text-align: center;
+    width: 100%;
+    max-width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.service-item img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.service-item::before {
+    content: "";
     position: absolute;
-    left: -8%;
-    top: 0%;
-    animation: mover 1s infinite alternate;
-    -moz-animation: mover 1s infinite alternate;
-    -webkit-animation: mover 1s infinite alternate;
-    -o-animation: mover 1s infinite alternate;
-    /* transform: rotate(45deg) !important; */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(29, 49, 87, 0.6);
+    border-radius: 5px;
+    transition: opacity 0.3s ease;
+    opacity: 1;
+    z-index: 1;
 }
 
-header .row h2{
-    margin: -40px 40px 40px -10px;
+.service-item p {
+    position: relative;
+    z-index: 2;
+    color: white;
+    font-size: 16px;
+    padding: 5px;
+    text-align: center;
+    font-weight: bold;
 }
 
+.service-item:hover::before {
+    opacity: 0.8;
+}
 
+@media (max-width: 768px) {
+    .services-grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 8px;
+    }
+
+    .service-item img {
+        height: 180px;
+    }
+
+    .service-item p {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 500px) {
+    .services-grid {
+        grid-template-columns: 1fr;
+    }
+
+    .service-item img {
+        height: 150px;
+    }
+}
+
+.contact-item {
+    background-color: #D3F1F5;
+    padding: 30px;
+    border-radius: 10px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
+}
+
+.phone-icon {
+    color: #1D3157;
+    margin-bottom: 10px;
+}
+
+.enquiry-text {
+    font-size: 16px;
+    font-weight: bold;
+    color: #1D3157;
+    margin-bottom: 5px;
+}
+
+.enquiry-number {
+    font-size: 20px;
+    color: #1D3157;
+    font-weight: bold;
+}
+
+@media (max-width: 768px) {
+    .contact-item {
+        grid-column: span 1;
+    }
+}
+
+.book-appointment-container {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+    margin-bottom: 40px;
+}
+
+.book-appointment-button {
+    background-color: #263B6E;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.book-appointment-button:hover {
+    background-color: #1f2a54;
+}
+
+.video-section {
+    text-align: center;
+    margin: 40px 0;
+}
+
+.video-grid {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.video-grid iframe {
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 320px;
+    height: 400px;
+}
+
+.video-section h3 {
+    margin-bottom: 20px;
+    font-size: 24px;
+    color: #333;
+}
+
+@media (max-width: 768px) {
+    .video-grid iframe {
+        max-width: 90%;
+        height: 450px;
+    }
+}
+
+@media (max-width: 500px) {
+    .video-grid {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .video-grid iframe {
+        max-width: 100%;
+        height: 400px;
+    }
+}
